manifests/k8s/namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels: 
    pod-security.kubernetes.io/enforce: restricted
